--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,74 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Cherry Bomb;
+  color: #00489C;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #FCD060;
+  background-color: #FCD060;
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@font-face {
+  font-family: 'Cherry Bomb';
+  src: url('./cherryBomb/cherrybomb-regular-webfont.woff2') format('woff2'),
+  url('./cherryBomb/cherrybomb-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  
+}
+
+
+.bg-color-card {
+  background-color:#FFEFC5
+}
+
+.bg-color-navbar {
+  background-color: #34B8F0;
+}
+
+.font-color {
+  color: #00489C
+}
+
+.navbar-fixed {
+  position: fixed;
+  bottom: 0;
+  left: 5%;
+  padding: 10px; 
+  height: fit-content; 
+  padding-top: 3%;
+  border-top-right-radius: 90px;
+  border-top-left-radius: 90px;
+  width:fit-content;
+  z-index: 1000;
+}
+
+.fixed-top-middle {
+  background-color: #FCD060;
+  position: fixed;
+  top: 0; 
+  width: 100%; 
+  height: 20vh;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center;
+
+}
+
+
+.nav-links{
+  color: white;
+  text-decoration: none;
+}
+
+.main-content {
+  padding-top: 150px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 20vw;
 }
