--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,7 +70,8 @@ body {
   top: 0;
   width: 100%;
   z-index: 500;
-  background: linear-gradient(to bottom, #FCD060, #FCD060 50%, transparent);
+  height: 30%;
+  background: linear-gradient(to bottom, #FCD060, #FCD060 55%, transparent);
 }
 
 
