--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,7 +34,7 @@ body {
 .sidebar-fixed {
   position: fixed;
   bottom: 0;
-  left: 5%;
+  left: 3%;
   padding: 10px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -51,7 +51,7 @@ body {
 .user-icon-fixed {
   position: fixed;
   top: 0;
-  right: 5%;
+  right: 3%;
   padding: 10px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -90,4 +90,11 @@ body {
   justify-content: center;
   flex-direction: column;
   padding-left: 20vw;
+}
+
+.card-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start; /* Aligns items to the start of the container */
+  gap: 10px; /* Adjust based on desired spacing between cards */
 }
